fix: Replace JDK 16 toList() by JDK 11 alternative
Fix #42