@@ -1,6 +1,7 @@
 package io.github.jy95.fds.common.bundle;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * A ResourceBundle implementation that aggregates multiple ResourceBundles.
@@ -44,7 +45,7 @@ public class MultiResourceBundle extends ResourceBundle {
         List<String> keys = this.delegates.stream()
                 .filter(Objects::nonNull)
                 .flatMap(delegate -> Collections.list(delegate.getKeys()).stream())
-                .toList();
+                .collect(Collectors.toList());
 
         return Collections.enumeration(keys);
     }
